--- a/app/templates/tabs.html
+++ b/app/templates/tabs.html
@@ -6,18 +6,16 @@
 -->
 <ion-tabs class="tabs-icon-top tabs-default">
 
-
   <!-- Messages Tab -->
-  <ion-tab title="Messages" icon="icon ion-chatboxes" href="#/tab/pets">
-    <ion-nav-view name="pets-tab"></ion-nav-view>
+  <ion-tab title="Messages" icon-on="ion-ios7-filing" icon-off="ion-ios7-filing-outline"
+           href="#/tab/messages">
+    <ion-nav-view name="messages-tab"></ion-nav-view>
   </ion-tab>
-
 
   <!-- Peoples Tab -->
-  <ion-tab title="Peoples" icon="icon ion-person-stalker" href="#/tab/adopt">
-    <ion-nav-view name="adopt-tab"></ion-nav-view>
+  <ion-tab title="Contacts" icon="icon ion-person-stalker" href="#/tab/contacts">
+    <ion-nav-view name="contacts-tab"></ion-nav-view>
   </ion-tab>
-
 
   <!-- Components Tab -->
   <ion-tab title="Components" icon="icon ion-android-storage" href="#/tab/components">
@@ -25,7 +23,7 @@
   </ion-tab>
 
   <!-- Setting Tab -->
-  <ion-tab title="Setting" icon="icon ion-gear-b" href="#/tab/setting">
+  <ion-tab title="Setting" icon-on="ion-ios7-gear" icon-off="ion-ios7-gear-outline" href="#/tab/setting">
         <ion-nav-view name="setting-tab"></ion-nav-view>
   </ion-tab>
 
