--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,6 +1,6 @@
 <ion-view title="'Login'{{ logindata.email }}" hide-back-button="true">
   <ion-content has-header="true" has-tabs="true" padding="true">
-    <form ng-submit="trylogin()">
+    <form ng-submit="tryLogin()">
       <div class="list list-inset">
         <label class="item item-input">
             <input type="text" placeholder="Email" ng-model="logindata.email" >
@@ -11,8 +11,9 @@
         <ion-toggle ng-model="logindata.remember">remember me</ion-toggle>
       </div>
       <button class="button button-block button-positive" type="submit">Login in</button>
+
+      <button type="submit" >Create Account</button>
     </form>
-      <button type="submit" ng-click="createAccount()">Create Account</button>
         <!--<div style="text-align: center">-->
           <!--Or <a href="/#/signup">Create an account</a>-->
         <!--</div>-->
