--- a/app/templates/profile-detail.html
+++ b/app/templates/profile-detail.html
@@ -1,8 +1,33 @@
-<ion-view title="Also Factual">
-    <ion-content class="padding">
-        <p>
-            <a class="button icon ion-home" href="#/tab/setting"> Home</a>
-            <a class="button icon ion-chevron-left" href="#/tab/facts"> Scientific Facts</a>
-        </p>
+<ion-view title="My Profile">
+    <ion-content class="padding" ng-controller="setting.profileCtrl">
+        <button ng-click="unBindData()">unBindData</button>
+        <span app-version></span>
+
+        <div class="list">
+            <label class="item item-input">
+                <span class="input-label">Username</span>
+                <input type="text" ng-model="profile.name">
+            </label>
+        </div>
+        <ion-toggle ng-model="profile.flag">flag</ion-toggle>
+        <label class="item item-input item-select">
+            <div class="input-label">
+                Lightsaber
+            </div>
+            <select ng-model="profile.b">
+                <option>Blue</option>
+                <option selected>{{ profile.b }}</option>
+                <option>Red</option>
+            </select>
+        </label>
+
+        <div class="list">
+            <div class="item range range-positive">
+                <i class="icon ion-ios7-sunny-outline"></i>
+                <input type="range" name="volume" min="0" max="100" ng-model="profile.num">
+                <i class="icon ion-ios7-sunny"></i>
+            </div>
+        </div>
+
     </ion-content>
 </ion-view>
