--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -1,12 +1,5 @@
 <ion-view title="Contacts">
     <div ng-controller="ContactsCtrl">
-        <ion-header-bar class="bar-positive">
-            <h1 class="title">1000 Contacts</h1>
-
-            <div class="button" ng-click="scrollBottom()">
-                Bottom
-            </div>
-        </ion-header-bar>
         <ion-header-bar class="bar-light bar-subheader">
             <input type="search"
                    placeholder="Filter contacts..."
@@ -19,20 +12,19 @@
         </ion-header-bar>
         <ion-content>
             <div class="list">
+
                 <a class="item contact-item"
                    collection-repeat="item in getContacts()"
                    collection-item-height="getItemHeight(item)"
                    collection-item-width="100 + '%'"
                    ng-style="{'line-height': getItemHeight(item) + 'px'}"
-                   ng-class="{'item-divider': item.isLetter}" href="#/tab/contacts/{{item.first_name}}">
+                   ng-class="{'item-divider': item.isLetter}" href="#/tab/contacts/{{item.id}}">
 
                     <i ng-if="!item.isLetter" class="icon"
                        ng-class="['ion-ios7-person','ion-person','ion-android-contact',
                    'ion-android-social-user','ion-person-stalker'][$index % 5]"></i>
 
-
-                    {{item.letter || (item.first_name+' '+item.last_name)}}
-
+                    {{item.letter || (item.first_name+' '+item.last_name ) + item.alias }}
 
                 </a>
             </div>
