--- a/app/templates/setting.html
+++ b/app/templates/setting.html
@@ -7,9 +7,10 @@
   <ion-content>
 
     <ion-list>
-        <ion-item type="item-text-wrap" >
-            {{ auth.user.id }}
-        <a class="button icon ion-home" href="#/tab/myprofile"> more</a>
+        <ion-item type="item-text-wrap" ng-controller="setting.profileCtrl">
+            {{ auth.user.id }}{{ profile.b }}
+
+        <a class="button icon ion-home" href="#/tab/myprofile"> </a>
         </ion-item>
         <ion-item type="item-text-wrap" >
             <div ng-show-auth="login">{{auth.user}} {{auth.user.id}} is logged in</div>
