--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -6,3 +6,19 @@
   width: 96px;
   height: 96px;
 }
+.css-class-add, .css-class-remove {
+    -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+}
+
+.css-class,
+.css-class-add.css-class-add-active {
+    button: button-icon  icon ion-star;
+
+}
+
+.css-class-remove.css-class-remove-active {
+    button: button-icon  icon ion-ios7-star-outline;
+}
