--- a/app/templates/message.html
+++ b/app/templates/message.html
@@ -1,29 +1,26 @@
 
-<div ng-controller="messageDetailCtrl">
+<div ng-controller="messageHeaderCtrl">
     <div class="bar bar-header">
         <a class="button icon ion-navicon" href="#/tab/messages"> </a>
-        <h1 class="title">{{ message.title }}</h1>
+        <h1 class="title">{{ ::message.title }}</h1>
         <button class="button">Edit</button>
     </div>
 
     <ion-content>
         <ion-list>
-
             <ion-item type="item-text-wrap">
-
                 <h3>{{ 'status:' + message.status}}
                     + {{message.last | date:"MM/dd/yyyy @ h:mma" }}</h3>
             </ion-item>
             <ion-item type="item-text-wrap">
                 {{ 'fromUser:' + message.fromUser}}
-                <nav-contact user=13>
-                </nav-contact >
+                <add-contact contact-id="::message.fromUser" >
+                </add-contact >
             </ion-item>
             <ion-item type="item-text-wrap">
                 {{ 'toUser:' + message.toUser}}
-                <nav-contact user="message.toUser">
-                </nav-contact >
-
+                <add-contact contact-id="::message.toUser" >
+                </add-contact >
             </ion-item>
         </ion-list>
     </ion-content>
