--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -18,7 +18,7 @@
                    collection-item-height="getItemHeight(item)"
                    collection-item-width="100 + '%'"
                    ng-style="{'line-height': getItemHeight(item) + 'px'}"
-                   ng-class="{'item-divider': item.isLetter}" href="#/tab/contacts/{{item.id}}">
+                   ng-class="{'item-divider': item.isLetter}" href="#/contacts/{{item.id}}">
 
                     <i ng-if="!item.isLetter" class="icon"
                        ng-class="['ion-ios7-person','ion-person','ion-android-contact',
