--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,7 +3,7 @@
     <form ng-submit="tryLogin()">
       <div class="list list-inset">
         <label class="item item-input">
-            <input type="text" placeholder="Email" ng-model="logindata.email" >
+            <input type="text" placeholder="Username" ng-model="logindata.email" >
         </label>
         <label class="item item-input">
             <input type="password" placeholder="Password" ng-model="logindata.pass">
