--- a/app/templates/tabs.html
+++ b/app/templates/tabs.html
@@ -4,26 +4,26 @@
   Each tab's child <ion-nav-view> directive will have its own 
   navigation history that also transitions its views in and out.
 -->
-<ion-tabs class="tabs-icon-top tabs-default">
+<ion-tabs class="tabs-default">
 
   <!-- Messages Tab -->
-  <ion-tab title="Messages" icon-on="ion-ios7-filing" icon-off="ion-ios7-filing-outline"
+  <ion-tab title="Messages"
            href="#/tab/messages">
     <ion-nav-view name="messages-tab"></ion-nav-view>
   </ion-tab>
 
   <!-- Peoples Tab -->
-  <ion-tab title="Contacts" icon="icon ion-person-stalker" href="#/tab/contacts">
+  <ion-tab title="Contacts"  href="#/tab/contacts">
     <ion-nav-view name="contacts-tab"></ion-nav-view>
   </ion-tab>
 
   <!-- Components Tab -->
-  <ion-tab title="Components" icon="icon ion-android-storage" href="#/tab/components">
+  <ion-tab title="Components"  href="#/tab/components">
     <ion-nav-view name="components-tab"></ion-nav-view>
   </ion-tab>
 
   <!-- Setting Tab -->
-  <ion-tab title="Setting" icon-on="ion-ios7-gear" icon-off="ion-ios7-gear-outline" href="#/tab/setting">
+  <ion-tab title="Setting" href="#/tab/setting">
         <ion-nav-view name="setting-tab"></ion-nav-view>
   </ion-tab>
 
