--- a/app/templates/tabs.html
+++ b/app/templates/tabs.html
@@ -17,11 +17,11 @@
     <ion-nav-view name="contacts-tab"></ion-nav-view>
   </ion-tab>
 
-  <!-- Components Tab -->
+  <!-- Components Tab
   <ion-tab title="Components"  href="#/tab/components">
     <ion-nav-view name="components-tab"></ion-nav-view>
   </ion-tab>
-
+-->
   <!-- Setting Tab -->
   <ion-tab title="Setting" href="#/tab/setting">
         <ion-nav-view name="setting-tab"></ion-nav-view>
