--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,4 +1,4 @@
-<ion-view title="'Login'{{ logindata.email }}" hide-back-button="true">
+<ion-view title="'Login'" hide-back-button="true">
   <ion-content has-header="true" has-tabs="true" padding="true">
     <form ng-submit="tryLogin()">
       <div class="list list-inset">
