--- a/app/templates/message.html
+++ b/app/templates/message.html
@@ -33,7 +33,7 @@
         <div class="list" ng-controller="purchaseOrderHeaderCtrl">
 
             <div class="item item-divider">
-                Header{{ message.id }}
+                Header
             </div>
 
             <a ng-repeat="data in syncedData" class="item">
