--- a/app/templates/setting.html
+++ b/app/templates/setting.html
@@ -14,7 +14,9 @@
             <ion-item type="item-text-wrap" href="#/components-management"> >
                 components-management
             </ion-item>
-
+            <ion-item type="item-text-wrap" href="#/tab/sap-user-validation"> >
+                sap user validation
+            </ion-item>
 
             <ion-item type="item-text-wrap" ng-controller="LogoutCtrl">
                 <button class="button button-assertive button-block" ng-click="tryLogout()">
