--- a/app/templates/sap-user-validation.html
+++ b/app/templates/sap-user-validation.html
@@ -2,6 +2,7 @@
 
     <div class="bar bar-header">
         <a class="button icon-left ion-chevron-left button-clear button-dark" href="#/tab/setting">Back</a>
+
         <h1 class="title">SAP User Validation</h1>
     </div>
     <ion-content has-header="true" has-tabs="true" padding="true">
@@ -13,10 +14,11 @@
                 {{ data.$id+': '+data.$value }}
             </a>
         </div>
-        <form name="validation"  ng-submit="tryValidation()">
+        <form name="validation" ng-submit="tryValidation()">
             <div class="list list-inset">
                 <label class="item item-input">
-                    <input type="text" placeholder="Username" name="username" ng-model="model.user" ng-required="true" ng-minlength="4"
+                    <input type="text" placeholder="Username" name="username" ng-model="model.user" ng-required="true"
+                           ng-minlength="4"
                            ng-maxlength="10">
                 </label>
 
@@ -34,15 +36,20 @@
                     </select>
                 </label>
             </div>
+            <button ng-show="validation.username.$error.required"
+                    class="button button-clear button-assertive">
+                username is required
+            </button>
+            <button ng-show="validation.username.$error.maxlength"
+                    class="button button-clear button-assertive">
+                username is too long
+            </button>
+            <button ng-show="validation.username.$error.minlength"
+                    class="button button-clear button-assertive">
+                username is too short
+            </button>
 
-
-                <p ng-show="validation.username.$error.required">username is required</p>
-                <p ng-show="validation.username.$error.minlength">username is too short</p>
-                <p ng-show="validation.username.$error.maxlength">username is too long</p>
-
-
-
-            <button class="button button-block button-positive" type="submit">Validation</button>
+            <button class="button button-block button-positive" type="submit">{{ model.buttontext }}</button>
         </form>
 
     </ion-content>
