--- a/app/templates/message-list.html
+++ b/app/templates/message-list.html
@@ -1,16 +1,25 @@
-<div >
+<div>
     <div class="bar bar-header">
         <a class="button icon-left ion-chevron-left button-clear button-dark"
            href="#/tab/messages">Back</a>
+
         <h1 class="title">{{ component }}</h1>
     </div>
     <ion-content>
         <ion-list>
-            <ion-item type="item-text-wrap" ng-repeat="(key, value) in messages "
-                      ng-click="goDetail(key)">
-                <h3>{{ value.$id }}{{ value }} </h3>
-                <span class="item-note" am-time-ago="value.doc_DATE"></span>
+            <ion-item type="item-text-wrap"
+                      ng-repeat="message in messages  | orderBy:['-favorite','-id']"
+                      ng-click="goDetail(message.id,message.read)">
+
+                <h1 ng-class="{positive: message.read, energized: message.favorite}">
+                    {{ message.id }}
+                </h1>
+                <div class="row">
+                    <div class="col">{{ message.metadata.target_VAL| currency:"RMB￥"}}</div>
+                    <span class="item-note" am-time-ago="message.date"></span>
+                </div>
             </ion-item>
+
         </ion-list>
     </ion-content>
 </div>
