--- a/app/templates/message.html
+++ b/app/templates/message.html
@@ -13,10 +13,9 @@
     <ion-content>
         <ion-list>
             <ion-item type="item-text-wrap">
-                <reset message="message">
-                </reset>
-                <next message="message">
-                </next>
+                <create-task message="message">
+                </create-task>
+
             </ion-item>
         </ion-list>
         <div class="list" >
