--- a/app/templates/sap-user-validation.html
+++ b/app/templates/sap-user-validation.html
@@ -10,7 +10,7 @@
             <div class="item item-divider">
                 SAP_System
             </div>
-            <a ng-repeat="data in syncedData" class="item">
+            <a ng-repeat="data in SAPSysArray" class="item">
                 {{ data.$id+': '+data.$value }}
             </a>
         </div>
