--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -10,7 +10,7 @@
         </label>
         <ion-toggle ng-model="logindata.remember">remember me</ion-toggle>
       </div>
-      <button class="button button-block button-positive" type="submit">Login in</button>
+      <button class="button button-block button-positive" type="submit">Sign in</button>
     </form>
 
   </ion-content>
