--- a/app/templates/message-list.html
+++ b/app/templates/message-list.html
@@ -16,9 +16,9 @@
                 </h1>
 
                 <div class="row">
-                    <div class="col">{{ message.metadata.target_VAL| currency:"RMB￥"}}</div>
-                    <div class="col">{{ message.message}}</div>
-
+                    <div class="col">{{ message.message}}{{ message.metadata.target_VAL| currency:"RMB￥"}}</div>
+                </div>
+                <div class="row">
                     <span class="item-note" am-time-ago="message.date"></span>
                 </div>
             </ion-item>
