--- a/app/templates/sap-user-validation.html
+++ b/app/templates/sap-user-validation.html
@@ -31,10 +31,17 @@
                     <div class="input-label">
                         Language
                     </div>
-                    <select name='options' ng-model="model.preflang"
+                    {{preflang}}
+                    <select name='options' ng-model="preflang"
                             ng-options="language as language.name for language in languages">
                     </select>
+
                 </label>
+
+                <p>selected item is : {{selectedItem}}</p>
+                <select ng-model="selectedItem">
+                    <option ng-repeat="item in languages" value="{{item.value}}">{{item.name}}</option>
+                </select>
             </div>
             <button ng-show="validation.username.$error.required"
                     class="button button-clear button-assertive">
@@ -48,7 +55,12 @@
                     class="button button-clear button-assertive">
                 username is too short
             </button>
-
+            <div class="list">
+                <a ng-repeat="(key,value) in model.last" class="item">
+                    {{ key+': '+value }}
+                </a>
+                <span class="item-note" am-time-ago="message.last.date"></span>
+            </div>
             <button class="button button-block button-positive" type="submit">{{ model.buttontext }}</button>
         </form>
 
