--- a/app/templates/setting.html
+++ b/app/templates/setting.html
@@ -7,9 +7,8 @@
     <ion-content>
 
         <ion-list>
-            <ion-item type="item-text-wrap" ng-controller="setting.profileCtrl">
-                {{ authData.password.email}}{{ profile.b }}
-                <a class="button icon ion-home" href="#/tab/myprofile"> </a>
+            <ion-item type="item-text-wrap" ng-controller="setting.profileCtrl" href="#/tab/myprofile">
+                {{ authData.password.email}}
             </ion-item>
 
             <ion-item type="item-text-wrap" href="#/tab/sap-user-validation"> >
