--- a/app/templates/message-list.html
+++ b/app/templates/message-list.html
@@ -17,6 +17,7 @@
 
                 <div class="row">
                     <div class="col">{{ message.message}}{{ message.metadata.target_VAL| currency:"RMB￥"}}</div>
+                    <div class="col">{{ message.metadata.vend_NAME}}</div>
                 </div>
                 <div class="row">
                     <span class="item-note" am-time-ago="message.date"></span>
