--- a/app/templates/tabs.html
+++ b/app/templates/tabs.html
@@ -6,25 +6,27 @@
 -->
 <ion-tabs class="tabs-default">
 
-  <!-- Messages Tab -->
+    <!-- Messages Tab -->
   <ion-tab title="Messages"
            href="#/tab/messages">
     <ion-nav-view name="messages-tab"></ion-nav-view>
+
+
   </ion-tab>
 
-  <!-- Peoples Tab -->
-  <ion-tab title="Contacts"  href="#/tab/contacts">
-    <ion-nav-view name="contacts-tab"></ion-nav-view>
-  </ion-tab>
-
+    <!-- Peoples Tab
+    <ion-tab title="Contacts"  href="#/tab/contacts">
+      <ion-nav-view name="contacts-tab"></ion-nav-view>
+    </ion-tab>
+  -->
   <!-- Components Tab
   <ion-tab title="Components"  href="#/tab/components">
     <ion-nav-view name="components-tab"></ion-nav-view>
   </ion-tab>
 -->
   <!-- Setting Tab -->
-  <ion-tab title="Setting" href="#/tab/setting">
-        <ion-nav-view name="setting-tab"></ion-nav-view>
+    <ion-tab title="Setting" href="#/tab/setting">
+    <ion-nav-view name="setting-tab"></ion-nav-view>
   </ion-tab>
 
 </ion-tabs>
