--- a/app/templates/setting.html
+++ b/app/templates/setting.html
@@ -7,8 +7,8 @@
     <ion-content>
 
         <ion-list>
-            <ion-item type="item-text-wrap" ng-controller="setting.profileCtrl" href="#/tab/myprofile">
-                {{ authData.password.email}}
+            <ion-item type="item-text-wrap" ng-controller="setting.profileCtrl">
+            {{ authData.password.email}}
             </ion-item>
 
             <ion-item type="item-text-wrap" href="#/tab/sap-user-validation"> >
